adds Redis test refactors webanno into separate project adds travis